# glendza-home

./: .cursorrules  .gitignore  Makefile  README.md  ansible.cfg  inventory.ini  pyproject.toml
.cursor/commands/: new-service.md
group_vars/: deploy.yml  setup.yml
keys/: glendza-home  glendza-home.pub  serveradmin  serveradmin.pub
playbooks/: generate_wireguard_peers.yml  purge_old_registry_images.yml  security_status.yml  setup_caddy.yml  setup_docker.yml  setup_docker_registry.yml  setup_dozzle.yml  setup_essentials.yml  setup_fail2ban.yml  setup_filebrowser.yml  setup_format_external_hdd.yml  setup_glendza.yml  setup_jellyfin.yml  setup_logrotate.yml  setup_miniflux.yml  setup_paperless.yml  setup_postgres.yml  setup_tinyauth.yml  setup_ttyd.yml  setup_wireguard.yml
roles/caddy/: README.md
roles/caddy/defaults/: main.yml
roles/caddy/tasks/: main.yml
roles/caddy/templates/: Caddyfile.j2  Dockerfile.j2  compose.yml.j2
roles/cloudflare/defaults/: main.yml
roles/cloudflare/tasks/: main.yml
roles/docker/tasks/: main.yml
roles/docker_network/tasks/: main.yml
roles/docker_registry/: README.md
roles/docker_registry/defaults/: main.yml
roles/docker_registry/tasks/: main.yml
roles/docker_registry/templates/: compose.yml.j2
roles/dozzle/: README.md
roles/fail2ban/: README.md
roles/filebrowser/: README.md
roles/glendza/: README.md
roles/jellyfin/: README.md
roles/logrotate/: README.md
roles/miniflux/: README.md
roles/postgres/: README.md
roles/tinyauth/: README.md
roles/wireguard/: README.md
vars/: host_secrets.yml
(+56 files in other folders)
