[project]
name = "glendza-home"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ansible>=11.3.0,<12.0.0",
    "ansible-core>=2.18,<3.0.0",
    "ansible-dev-tools>=25.2.1",
    "ansible-lint>=25.1.3",
    "passlib>=1.7.4",
    "pygithub>=2.7.0",
]
